force-app/main/default/objects/Demo_Date_Shifter_Test_Future__c/Demo_Date_Shifter_Test_Future__c.object-meta.xml
<CustomObject>
    <description>Holds dates a week in the future for testing the Demo Date Shifter component.</description>
    <label>Demo Date Shifter Test Future</label>
    <nameField>
        <displayFormat>FUTURE-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Date Shifter Test Future</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>