force-app/main/default/objects/Demo_Date_Shifter_Test_Future__c/fields/Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Date_Field__c</fullName>
    <label>Date Field</label>
    <type>Date</type>
</CustomField>