force-app/main/default/objects/Demo_Date_Shifter_Test_Future__c/fields/DateTime_Field__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Field__c</fullName>
    <label>DateTime Field</label>
    <type>DateTime</type>
</CustomField>