force-app/main/default/objects/Demo_Date_Shifter_Test_Future__c/fields/Random_Number__c.field-meta.xml
<CustomField>
    <fullName>Random_Number__c</fullName>
    <description>A random number between 0 and 100 that can be used with a validation rule to test error handling in the Date Shifter.</description>
    <inlineHelpText>A random number between 0 and 100 that can be used with a validation rule to test error handling in the Date Shifter.</inlineHelpText>
    <label>Random Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>