force-app/main/default/objects/Demo_Date_Shifter_Test_Future__c/validationRules/Random_Number_Must_Be_Between_0_and_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Random_Number_Must_Be_Between_0_and_100</fullName>
    <active>true</active>
    <description>Validation rule used to test the error handling capabilities of the Date Shifter.</description>
    <errorConditionFormula>IF(ISBLANK(Random_Number__c),
			FALSE,
			Random_Number__c &lt; 0 || Random_Number__c &gt; 100)</errorConditionFormula>
    <errorDisplayField>Random_Number__c</errorDisplayField>
    <errorMessage>Number must be between 0 and 100.</errorMessage>
</ValidationRule>